UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Account_BTN__c.field-meta.xml
<CustomField>
    <fullName>Account_BTN__c</fullName>
    <label>Account BTN</label>
    <type>Phone</type>
</CustomField>