UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Ad_Code__c.field-meta.xml
<CustomField>
    <fullName>Ad_Code__c</fullName>
    <description>Ad Code campaign</description>
    <label>Ad Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>