UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <description>ClearLink Additional Comments Field</description>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>