UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Address_Check__c.field-meta.xml
<CustomField>
    <fullName>Address_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is used in a workflow where the address from billing is copied to shipping</description>
    <label>Address Check</label>
    <type>Checkbox</type>
</CustomField>