UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Alt_Ch_Partner_Company__c.field-meta.xml
<CustomField>
    <fullName>Alt_Ch_Partner_Company__c</fullName>
    <description>Alt Ch Partner Company Field</description>
    <label>Alt Ch Partner Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>