UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Alt_Ch_Partner_ID_OTM__c.field-meta.xml
<CustomField>
    <fullName>Alt_Ch_Partner_ID_OTM__c</fullName>
    <formula>&quot;701005&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alt Ch Partner ID</label>
    <type>Text</type>
</CustomField>