UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Alt_Ch_SMB_Channel__c.field-meta.xml
<CustomField>
    <fullName>Alt_Ch_SMB_Channel__c</fullName>
    <description>Alt Ch SMB Channel picklist value</description>
    <label>Alt Ch SMB Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Door to Door</fullName>
            </value>
            <value>
                <fullName>Outbound Telemarketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>