UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Alt_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Alt_Contact_First_Name__c</fullName>
    <label>Alt Contact First Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>