UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Alt_Email__c.field-meta.xml
<CustomField>
    <fullName>Alt_Email__c</fullName>
    <label>Alt Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>