UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Alt_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Alt_Telephone__c</fullName>
    <description>SMB Alt Telephone</description>
    <label>Alt Telephone</label>
    <type>Phone</type>
</CustomField>