UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Annual_IT_Spend__c.field-meta.xml
<CustomField>
    <fullName>Annual_IT_Spend__c</fullName>
    <inlineHelpText>Amount spent by IT annually on telecom products and services.</inlineHelpText>
    <label>Annual IT Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>