UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Assigned_Base__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned Base?</label>
    <type>Checkbox</type>
</CustomField>