UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Aware_of_upcoming_Sales_Rep_contact__c.field-meta.xml
<CustomField>
    <fullName>Aware_of_upcoming_Sales_Rep_contact__c</fullName>
    <inlineHelpText>Is the lead aware the Sales Rep will be contacting them and when?</inlineHelpText>
    <label>Aware of upcoming Sales Rep contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>