UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/AwatingReplyLead__c.field-meta.xml
<CustomField>
    <fullName>AwatingReplyLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AwatingReplyLead</label>
    <type>Checkbox</type>
</CustomField>