UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/BAL_COUNT__c.field-meta.xml
<CustomField>
    <fullName>BAL_COUNT__c</fullName>
    <label>BAL COUNT</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>