UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/BAL_Customer__c.field-meta.xml
<CustomField>
    <fullName>BAL_Customer__c</fullName>
    <description>Does this customer have a business access line?</description>
    <label>BAL_Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>