UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/BB_Speed_Sold__c.field-meta.xml
<CustomField>
    <fullName>BB_Speed_Sold__c</fullName>
    <label>BB Speed Sold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1g</fullName>
            </value>
            <value>
                <fullName>2g</fullName>
            </value>
            <value>
                <fullName>300M</fullName>
            </value>
            <value>
                <fullName>700M</fullName>
            </value>
            <value>
                <fullName>200M</fullName>
            </value>
            <value>
                <fullName>75M</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>115</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>