UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/BB_Svc_Check__c.field-meta.xml
<CustomField>
    <fullName>BB_Svc_Check__c</fullName>
    <label>BB Svc Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible for new BB</fullName>
            </value>
            <value>
                <fullName>Existing BB</fullName>
            </value>
            <value>
                <fullName>Pending BB</fullName>
            </value>
            <value>
                <fullName>Not Qual for BB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>