UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/BHSI_Customer__c.field-meta.xml
<CustomField>
    <fullName>BHSI_Customer__c</fullName>
    <description>Does customer currently have Business High Speed Internet with Frontier</description>
    <label>BHSI Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>