UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Bill_Amt_Total__c.field-meta.xml
<CustomField>
    <fullName>Bill_Amt_Total__c</fullName>
    <label>Bill Amt Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>