UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Bill_Month__c.field-meta.xml
<CustomField>
    <fullName>Bill_Month__c</fullName>
    <label>Bill Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>