UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Bill_Subsys_Cd__c.field-meta.xml
<CustomField>
    <fullName>Bill_Subsys_Cd__c</fullName>
    <label>Bill Subsys Cd</label>
    <length>20</length>
    <type>Text</type>
</CustomField>