UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Bill_Sys_Cd__c.field-meta.xml
<CustomField>
    <fullName>Bill_Sys_Cd__c</fullName>
    <label>Bill Sys Cd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>