UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Billing_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Telephone_Number__c</fullName>
    <label>Billing Telephone Number</label>
    <type>Phone</type>
</CustomField>