UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/BTN_11__c.field-meta.xml
<CustomField>
    <fullName>BTN_11__c</fullName>
    <label>BTN (11)</label>
    <length>11</length>
    <type>Text</type>
</CustomField>