UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Building_CLLI__c.field-meta.xml
<CustomField>
    <fullName>Building_CLLI__c</fullName>
    <description>D&amp;B data</description>
    <label>Building CLLI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>