UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Building_Status__c.field-meta.xml
<CustomField>
    <fullName>Building_Status__c</fullName>
    <label>Description - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>