UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/BusinessName__c.field-meta.xml
<CustomField>
    <fullName>BusinessName__c</fullName>
    <label>Business Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>