UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/BusinessSecurity__c.field-meta.xml
<CustomField>
    <fullName>BusinessSecurity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Security</label>
    <type>Checkbox</type>
</CustomField>