UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Bypass_Validation_Lead__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is to BypassValidation rules created for the OPPT. As they are interfering when the lead is converted.</description>
    <label>Bypass Validation Lead</label>
    <type>Checkbox</type>
</CustomField>