UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Call_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Record_ID__c</fullName>
    <description>Call Record ID Field Requested by Lee, Junewon</description>
    <label>Call Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>