UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/CEO_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_Last_Name__c</fullName>
    <label>CEO Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>