UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/CEO_Title__c.field-meta.xml
<CustomField>
    <fullName>CEO_Title__c</fullName>
    <label>CEO Title</label>
    <length>25</length>
    <type>Text</type>
</CustomField>