UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Chat_Rep__c.field-meta.xml
<CustomField>
    <fullName>Chat_Rep__c</fullName>
    <label>Chat Rep</label>
    <length>150</length>
    <type>Text</type>
</CustomField>