UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Clearlink_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Clearlink_Agent_ID__c</fullName>
    <label>Clearlink Agent ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>