UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Clearlink_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Clearlink_Agent_Name__c</fullName>
    <label>Clearlink Agent Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>