UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/CloudBackup__c.field-meta.xml
<CustomField>
    <fullName>CloudBackup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloud Backup</label>
    <type>Checkbox</type>
</CustomField>