UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Comments_from_TTL_System__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_TTL_System__c</fullName>
    <inlineHelpText>Comments imported from TTL system</inlineHelpText>
    <label>Comments from TTL System</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>