UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account / Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Company)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>