UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Company_Size_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_of_Employees__c</fullName>
    <inlineHelpText>Company size can be determined by number of employees or by MRR.  
Small = &lt; 20 employees and/or &lt; $400 MRR
Medium = 20-499 employees and/or $400 - $2k MRR
Large = 500-999 employees and/or $2k - $4k MRR
Enterprise = 1,000+ employees and/or $4k + MRR</inlineHelpText>
    <label>Company Size (# of Employees)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-19</fullName>
            </value>
            <value>
                <fullName>20-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
            <value>
                <fullName>100-499</fullName>
                <isActive>false</isActive>
                <label>100-499</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>