UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Competitor_Lost_to__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Lost_to__c</fullName>
    <label>Competitor Lost to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altice</fullName>
            </value>
            <value>
                <fullName>Atlantic Broadband</fullName>
            </value>
            <value>
                <fullName>Bel Aire Internet</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Cox</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
            </value>
            <value>
                <fullName>Dish</fullName>
            </value>
            <value>
                <fullName>Gigamonster</fullName>
            </value>
            <value>
                <fullName>Hotwire Comm</fullName>
            </value>
            <value>
                <fullName>One Source</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Starry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>