UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Connected_Duration__c.field-meta.xml
<CustomField>
    <fullName>Connected_Duration__c</fullName>
    <description>Invoca Connected Duration</description>
    <label>Connected Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>