UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Construction_Status__c</fullName>
    <label>Construction Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>