UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Contact_Made_with_targeted_account__c.field-meta.xml
<CustomField>
    <fullName>Contact_Made_with_targeted_account__c</fullName>
    <description>SMB</description>
    <label>Q1: Contact made with targeted account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>