UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Bulk Billing Contact</fullName>
            </value>
            <value>
                <fullName>Client/Reference</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Courtesy Notice Person</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Engagement Mgr</fullName>
            </value>
            <value>
                <fullName>Engagement Mgr Coach</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Leasing Agent</fullName>
            </value>
            <value>
                <fullName>Legal Notice Person 1</fullName>
            </value>
            <value>
                <fullName>Legal Notice Person 2</fullName>
            </value>
            <value>
                <fullName>On-Site Technical Contact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Property Contact</fullName>
            </value>
            <value>
                <fullName>Signer</fullName>
            </value>
            <value>
                <fullName>PARTNER</fullName>
            </value>
            <value>
                <fullName>PRINCIPAL</fullName>
            </value>
            <value>
                <fullName>MANAGING MEMBER</fullName>
            </value>
            <value>
                <fullName>PRESIDENT</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>MANAGER</fullName>
            </value>
            <value>
                <fullName>OWNER</fullName>
            </value>
            <value>
                <fullName>BRANCH MANAGER</fullName>
            </value>
            <value>
                <fullName>TRUEOWNER</fullName>
            </value>
            <value>
                <fullName>PROPERTYMANAGER</fullName>
            </value>
            <value>
                <fullName>VICE-PRESIDENT</fullName>
            </value>
            <value>
                <fullName>DISTRICT MANAGER</fullName>
            </value>
            <value>
                <fullName>MEMBER</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>