UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/ContractYear__c.field-meta.xml
<CustomField>
    <fullName>ContractYear__c</fullName>
    <label>Contract Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>