UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <description>Related To	
Lead Source / Primary Campaign Creation or Pick list value added/created</description>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Inbound Chat</fullName>
            </value>
            <value>
                <fullName>Form fill</fullName>
            </value>
            <value>
                <fullName>Cart Submission</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>