UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Current_Contract_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_expiration_date__c</fullName>
    <inlineHelpText>Expiration date of the leads current contract.</inlineHelpText>
    <label>Current Contract expiration date</label>
    <type>Date</type>
</CustomField>