UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Current_Contract_Expiring_W_in_24_Months__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Expiring_W_in_24_Months__c</fullName>
    <inlineHelpText>Is the leads current internet or telecom contract expiring within the next 24 months?</inlineHelpText>
    <label>Current Contract Expiring W/in 24 Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>