UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Current_CPE_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_CPE_Customer__c</fullName>
    <label>Current CPE Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>