UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Current_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_Customer__c</fullName>
    <inlineHelpText>Is this company a current Frontier customer?</inlineHelpText>
    <label>Current Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>