UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Current_Provider_and_Services__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider_and_Services__c</fullName>
    <inlineHelpText>Who is their current provider and what products and services do they have with them?</inlineHelpText>
    <label>Current Provider and Services</label>
    <type>TextArea</type>
</CustomField>