UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Cust_Acct_Join_Key__c.field-meta.xml
<CustomField>
    <fullName>Cust_Acct_Join_Key__c</fullName>
    <label>Cust Acct Join Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>