UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Cust_Num__c.field-meta.xml
<CustomField>
    <fullName>Cust_Num__c</fullName>
    <label>Cust Num</label>
    <length>10</length>
    <type>Text</type>
</CustomField>