UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Cust_Seg_Nm__c.field-meta.xml
<CustomField>
    <fullName>Cust_Seg_Nm__c</fullName>
    <label>Cust Seg Nm</label>
    <length>25</length>
    <type>Text</type>
</CustomField>