UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <description>Status of current customer.  Active/Lead refers to existing customers not assigned to a representative and no loaded as a company.</description>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Active/Lead</fullName>
            </value>
            <value>
                <fullName>Deactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>New Add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>