UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/D_Pid__c.field-meta.xml
<CustomField>
    <fullName>D_Pid__c</fullName>
    <description>Customer String Value 29</description>
    <label>D Pid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>