UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data SMB</description>
    <label>Data</label>
    <type>Checkbox</type>
</CustomField>