UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Data_QTY__c.field-meta.xml
<CustomField>
    <fullName>Data_QTY__c</fullName>
    <description>Data SMB QTY</description>
    <label>Data QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>