UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/DataPrivateLine__c.field-meta.xml
<CustomField>
    <fullName>DataPrivateLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Private Line</label>
    <type>Checkbox</type>
</CustomField>