UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Date_for_48hrs_CycleBack__c.field-meta.xml
<CustomField>
    <fullName>Date_for_48hrs_CycleBack__c</fullName>
    <label>Date for 48hrs CycleBack</label>
    <type>DateTime</type>
</CustomField>