UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Days_in_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_Status__c</fullName>
    <formula>Today() - Date_of_Last_Status_Change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Current Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>