UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Days_till_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Days_till_Qualified__c</fullName>
    <description>Number of days from date Lead created till the date Lead Status = &quot;Qualified&quot;</description>
    <formula>IF( ISBLANK( Lead_Status_changed_to_Qualified_date__c ) ,
NULL ,

Lead_Status_changed_to_Qualified_date__c 
-
DATEVALUE( CreatedDate )
+ 1
)</formula>
    <label>Days till Qualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>