UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Decision_Maker_Authority_Name__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Authority_Name__c</fullName>
    <label>Decision Maker (Authority) Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>