UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Decision_Maker_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Primary_Phone__c</fullName>
    <label>Decision Maker Primary Phone</label>
    <type>Phone</type>
</CustomField>