UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Decision_Maker_Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Secondary_Phone__c</fullName>
    <label>Decision Maker Secondary Phone</label>
    <type>Phone</type>
</CustomField>