UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/Decision_Maker_Title__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Title__c</fullName>
    <label>Decision Maker Title</label>
    <length>55</length>
    <type>Text</type>
</CustomField>