UCF-APR2.4/ftr main/force-app/main/default/objects/Lead/fields/dedicatedInternetAccess__c.field-meta.xml
<CustomField>
    <fullName>dedicatedInternetAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Internet Access</label>
    <type>Checkbox</type>
</CustomField>